# OpenClio

./: .gitignore  .gitmodules  LICENSE  README.md  bailStuff.py  bigGuise.txt  categories bail.md  codebook.txt  hierarchy.txt  openclio.py  prompts.py  pyproject.toml  setup.py  utils.py  writeOutput.py
openclio/: __init__.py  faissKMeans.py  faissUMap.py  lzutf8.py  openclio.py  opencliotypes.py  prompts.py  utils.py  websiteTemplate.html  writeOutput.py
project-wiki/: Home.md  README.md  openclio.md  opencliotypes.md  prompts.md  utils.md  writeOutput.md
